feat: implementar o modelo FootballMatch e migrações relacionadas
